[MPMD-304] - maven-pmd-plugin should be toolchains-aware
Further refactoring.
Resolve deprecated usages.